--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -45,6 +45,7 @@
     border-radius: 16px;
     font-weight: bold;
     font-size: 20px;
+    margin-bottom: 10px;
 }
 
 .reserve-button:hover{
@@ -82,6 +83,13 @@
     color: black;
     border-radius: 16px;
     font-size: 16px;
+}
+
+.testimonials-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(132, 167, 155);
 }
 
 
