Se agrega la seccion About y el Footer

--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -92,6 +92,13 @@
     background-color: rgb(132, 167, 155);
 }
 
+.about-content{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-left: 25%;
+}
+
 
 
 
