--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,10 +1,18 @@
 footer{
     display: flex;
     flex-direction: row;
+    align-items: center;
     justify-content: space-between;
-    background-color: rgb(73, 94, 87);
+    background-color: #EE9972; 
+    height: 350px;
+    padding: 10px;
+    padding-inline: 20%;
 }
 
 footer img{
-    width: 200px;
+    transform: scale(0.7);
+}
+
+footer p{
+    color: black;
 }
