--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -89,15 +89,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(132, 167, 155);
+    padding-top: 30px;
+    background-color: #FBDABB;
 }
 
-.about-content{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin-left: 25%;
-}
 
 
 
