--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,4 +1,38 @@
+.about-content{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows:auto;
+    padding-top: 120px;
+    margin-bottom: 50px;
+    margin-left: 10%;
+}
+
 
 .about-img img{
-    width: 20%;
+    width: 30%;
+}
+
+.imagen-2{
+    transform: translate(-100px, -70px);
+}
+
+.about-content-1{
+    margin-left: 25%;
+    margin-right: 25%;
+}
+
+.about-content-1 h1{
+    font-family: 'Times New Roman', Times, serif;
+    padding: 0px;
+    margin: 0px;
+    font-size: 48px;
+    color: #F4CE14;
+}
+
+.about-content-1 h4{
+    font-family: 'Times New Roman', Times, serif;
+    padding: 0px;
+    margin: 0px;
+    margin-bottom: 12px;
+    font-size: 32px;
 }
