--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -36,3 +36,24 @@
     margin-bottom: 12px;
     font-size: 32px;
 }
+
+@media (max-width: 920px) {
+    .about-content{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-auto-rows:auto;
+        padding-top: 60px;
+        margin-bottom: 50px;
+        margin-inline: 5%;
+    }
+    .about-img > img{
+        width: 30%;
+    }
+    .about-img{
+        align-items: center;
+    }
+    
+    .imagen-2{
+        transform: translate(0px, 0px);
+    }
+}
