se agrega el generardor de horas aleatorias, se agrega los ultimos detalles del diseño responsivo y se agrega elmentos finales del diseño.

--- a/src/styles/ReservationSection1.css
+++ b/src/styles/ReservationSection1.css
@@ -68,3 +68,15 @@
     font-weight: 500;
     margin-bottom: 50px;
 }
+
+@media (max-width: 1200px) {
+    .form-reservation > div > select{
+        width: 80%;
+        margin-left: 20%;
+    }
+
+    .form-reservation > div > input{
+        width: 80%;
+        margin-left: 15%;
+    }
+}
