--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -1,18 +1,16 @@
 .prin-content{
-    display: flex;
-    flex-direction: row;
-    align-items: start;
-    justify-content: space-evenly;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows:auto;
     background-color: rgb(73, 94, 87);
+    padding-inline: 25%;
+    align-items: center;
 }
 
-.prin-content section{
-    margin-left : 100px;
-
-}
-
-.prin-content img{
-    margin-right: 70px;
+.prin-content > img{
+    width: 70%;
+    align-self: center;
+    margin-left: 32%;
 }
 
 .prin-content section h1{
@@ -92,6 +90,54 @@
     padding-top: 30px;
     background-color: #FBDABB;
 }
+
+@media (max-width: 1500px) {
+    .prin-content{
+        padding-inline: 20%;
+        align-items: center;
+    }
+}
+
+
+@media (max-width: 1200px) {
+    .prin-content{
+        padding-inline: 10%;
+        align-items: center;
+    }
+}
+
+
+@media (max-width: 920px) {
+    .prin-content{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-auto-rows:auto;
+        background-color: rgb(73, 94, 87);
+        padding-inline: 5%;
+        align-items: center;
+    }
+
+    .prin-content > img{
+        width: 100%;
+        align-self: center;
+        margin-left: 0%;
+    }
+
+    .prin-content > section{
+        padding-inline: 20%;
+        width: 100%;
+    }
+
+
+}
+
+@media (max-width: 600px) {
+    .special-tittle h1{
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 30px;
+    }
+}
+
 
 
 
