--- a/src/styles/Reservation.css
+++ b/src/styles/Reservation.css
@@ -52,9 +52,16 @@
         grid-auto-rows:auto;
         margin-inline: 3%;
         padding: 10px;
+        padding-bottom: 20px;
+        margin-bottom: 20px;
+
+        box-shadow: 1px 8px 19px 2px rgba(0,0,0,0.1);
+        -webkit-box-shadow: 1px 8px 19px 2px rgba(0,0,0,0.1);
+        -moz-box-shadow: 1px 8px 19px 2px rgba(0,0,0,0.1);
     }
     .reservation-content > section:first-child{
         border: none;
+        border-bottom: 1px solid #e4e4e4;
     }
 }
 
