--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -7,6 +7,11 @@
     margin-left: 10%;
 }
 
+.about-img:hover{
+    .imagen-2{
+        transform: translate(20px, 0px);
+    }
+}
 
 .about-img img{
     width: 30%;
@@ -14,6 +19,7 @@
 
 .imagen-2{
     transform: translate(-100px, -70px);
+    transition: transform 1s;
 }
 
 .about-content-1{
